--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,19 @@
  Virtual Machine Manager News
  ============================
 
+Release 0.8.0 (July 28th, 2009)
+-------------------------------
+
+This release includes:
+
+ - New 'Clone VM' Wizard
+ - Improved UI, including an overhaul of the main 'manager' view
+ - System tray icon for easy VM access (start, stop, view console/details)
+ - Wizard for adding serial, parallel, and video devices to existing VMs.
+ - CPU pinning support (Michal Novotny)
+ - Ability to view and change VM security (sVirt) settings (Dan Walsh)
+ - Many bug fixes and improvements
+
 Release 0.7.0 (March 9th, 2009)
 -------------------------------
 
