addhardware: Fix error message syntax typo

--- a/AUTHORS
+++ b/AUTHORS
@@ -59,6 +59,7 @@ Further patches have been submitted by:
   Emmanuel Lacour <elacour-at-home-dn-dot-net>
   Laurent Léonard <laurent-at-open-minds-dot-org>
   Michal Novotny <minovotn-at-redhat-dot-com>
+  Paul W. Frields <stickster-at-gmail-dot-com>
 
   <...send a patch & get your name here...>
 
