manager: Fix markup on pango < 1.21

--- a/AUTHORS
+++ b/AUTHORS
@@ -60,6 +60,7 @@ Further patches have been submitted by:
   Laurent Léonard <laurent-at-open-minds-dot-org>
   Michal Novotny <minovotn-at-redhat-dot-com>
   Paul W. Frields <stickster-at-gmail-dot-com>
+  Fred Leeflang <fredl-at-dutchie-dot-org>
 
   <...send a patch & get your name here...>
 
