Updated french and polish translations.

--- a/po/fr.po
+++ b/po/fr.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: virt-manager.tip\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-09-29 14:34-0400\n"
-"PO-Revision-Date: 2009-09-13 00:49+0200\n"
+"PO-Revision-Date: 2009-10-04 02:15+0200\n"
 "Last-Translator: Laurent Léonard <laurent@open-minds.org>\n"
 "Language-Team: French <fedora-trans-fr@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -118,8 +118,7 @@ msgstr "La longueur de la liste d'URL"
 
 #: ../src/virt-manager.schemas.in.h:19
 msgid "The number of samples to keep in the statistics history"
-msgstr ""
-"Le nombre d'échantillons à conserver dans l'historique des statistiques"
+msgstr "Le nombre d'échantillons à conserver dans l'historique des statistiques"
 
 #: ../src/virt-manager.schemas.in.h:20
 msgid ""
@@ -191,8 +190,7 @@ msgstr "S'il faut ou non installer un périphérique de son pour les MV locales"
 
 #: ../src/virt-manager.schemas.in.h:33
 msgid "Whether to install a sound device for remote VMs or not"
-msgstr ""
-"S'il faut ou non installer un périphérique de son pour les MV distantes"
+msgstr "S'il faut ou non installer un périphérique de son pour les MV distantes"
 
 #: ../src/virt-manager.schemas.in.h:34
 msgid ""
@@ -265,8 +263,7 @@ msgstr "La version de Libvirt ne supporte pas les périphériques vidéo."
 #: ../src/virtManager/addhardware.py:442
 #, python-format
 msgid "Uncaught error validating hardware input: %s"
-msgstr ""
-"Erreur non attrappée lors de la validation de l'entrée du matériel : %s"
+msgstr "Erreur non attrappée lors de la validation de l'entrée du matériel : %s"
 
 #: ../src/virtManager/addhardware.py:636
 msgid "Disk image:"
@@ -2180,8 +2177,7 @@ msgstr ""
 #: ../src/vmm-add-hardware.glade.h:23
 msgid ""
 "<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">Sound</span>"
-msgstr ""
-"<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">Son</span>"
+msgstr "<span weight=\"heavy\" size=\"xx-large\" foreground=\"#FFF\">Son</span>"
 
 #: ../src/vmm-add-hardware.glade.h:24
 msgid ""
@@ -2529,7 +2525,6 @@ msgid "<b>Forwarding</b>"
 msgstr "<b>Réacheminement</b>"
 
 #: ../src/vmm-create-net.glade.h:4
-#, fuzzy
 msgid ""
 "<b>Hint:</b> The network should be chosen from one of the IPv4 private "
 "address ranges. eg 10.0.0.0/8,  172.16.0.0/12, or 192.168.0.0/16"
@@ -2634,7 +2629,7 @@ msgstr "Destination :"
 
 #: ../src/vmm-create-net.glade.h:21
 msgid "Enable DHCP:"
-msgstr ""
+msgstr "Activer le DHCP :"
 
 #: ../src/vmm-create-net.glade.h:22
 msgid "End Address"
@@ -2755,8 +2750,7 @@ msgstr "S'il faut <b>réacheminer</b> le trafic vers le réseau physique"
 
 #: ../src/vmm-create-net.glade.h:53
 msgid "You will need to choose an IPv4 address space for the virtual network:"
-msgstr ""
-"Vous devrez choisir un espace d'adressage IPv4 pour le réseau virtuel :"
+msgstr "Vous devrez choisir un espace d'adressage IPv4 pour le réseau virtuel :"
 
 #: ../src/vmm-create-pool.glade.h:1
 msgid "<span size='x-large'>Add Storage Pool</span>"
@@ -2956,7 +2950,7 @@ msgstr "Entrez les détails de votre machine virtuelle"
 
 #: ../src/vmm-create.glade.h:21
 msgid "Error message"
-msgstr ""
+msgstr "Message d'erreur"
 
 #: ../src/vmm-create.glade.h:23
 msgid "GB"
